--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Siddharth's Personal Site</title>
+    <style>
+      body {
+        background-color: #a8d8ea;
+      }
+
+      hr {
+        border-style: none;
+        border-top-style: dotted;
+        width: 5%;
+        border-color: grey;
+        border-width: 7px;
+        margin-left: 5%;
+      }
+    </style>
   </head>
   <body>
     <table>
