--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <table>
       <tr>
-        <td><a href="http:\\www.facebook.com"><img src="https://scontent-del1-1.xx.fbcdn.net/v/t31.0-8/17758279_1297253743655466_3535231138368744311_o.jpg?_nc_cat=108&_nc_sid=09cbfe&_nc_oc=AQlfz_HpuISn8kx8SHUM7914m0giBqhgfym7F-8Nikw7-5L9I355623BqxXqu6uXo8s&_nc_ht=scontent-del1-1.xx&oh=7fdf1cc8e1d96eb444bd12d6b76a627a&oe=5EE02048" height="20%" width="30%" alt="Siddharth's Profile picture"></a></td>
+        <td><img src="circle-cropped.png"></td>
         <td><h1>Siddharth Vashisht😂</h1>
         <p><em><strong>Student</strong> and a <strong>developer.</strong></em></p>
         <p>Hello guys my name is <a href="http:\\www.facebook.com">Siddharth</a> and i am studying B.tech from bharati vidyapeeth college of enginner. I love coding.</p></td>
