--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <table>
       <tr>
-        <td><img src="circle-cropped.png"></td>
+        <td><img src="circle-cropped.png" height="20%" width="30%"></td>
         <td><h1>Siddharth Vashisht😂</h1>
         <p><em><strong>Student</strong> and a <strong>developer.</strong></em></p>
         <p>Hello guys my name is <a href="http:\\www.facebook.com">Siddharth</a> and i am studying B.tech from bharati vidyapeeth college of enginner. I love coding.</p></td>
