--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </style>
   </head>
   <body>
-    <table>
+    <table width="50%">
       <tr>
         <td><img src="circle-cropped.png" height="10%" width="20%"></td>
         <td><h1>Siddharth Vashisht😂</h1>
